Fix overflow issue

--- a/style.scss
+++ b/style.scss
@@ -118,6 +118,10 @@ nav {
     overflow-x: hidden;
 }
 
+.overflow {
+    overflow-x: visible;
+}
+
 .transition {
     transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
